# debussy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRESENTATION.md  README.md  REFACTORING_PLAN.md  WORKFLOW.md  orchestration-presentation.html  orchestration-presentation.md  pyproject.toml  setup.sh
.claude/: settings.json
.claude/hooks/: validate-bd-transition.py  validate-bd-transition.sh  verify-bead-updated.py  verify-bead-updated.sh
.claude/subagents/: architect.md  conductor.md  coordinator.md  designer.md  developer.md  devops.md  documenter.md  integrator.md  investigator.md  reviewer.md  tester.md
.github/workflows/: bump-version.yml
config/: pipelines.yaml
desktop/: .gitignore  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vitest-native-setup.ts  vitest.config.ts
docs/: ai-friendly-codebase-best-practices.md  hetzner-setup.md
examples/: auth-feature-walkthrough.md
scripts/: handoff-watcher.sh  handoff.sh  start-agents.sh
src/debussy/: __init__.py  cli.py  (+20 more)
tests/: test_audit.py  test_auto_tag.py  test_bead_client.py  test_cli_pause.py  test_cli_sessions.py  test_config.py  test_config_stages.py  test_dependency_unblock.py  test_diagnostics.py  test_enhanced_review_e2e.py  test_hooks.py  test_integrator_prompt_content.py  test_pipeline_checker.py  test_preflight.py  test_prompts.py  test_quota.py  test_spawner.py  test_takt.py  test_takt_cli.py  test_takt_db.py  test_takt_log.py  test_takt_models.py  test_tmux.py  test_transitions.py  test_watcher.py  test_worktree.py
(+117 files in other folders)
