[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debussy"
version = "0.3.38"
description = "Multi-agent orchestration for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
debussy = "debussy.__main__:main"
dbs = "debussy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
