[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "debussy"
dynamic = ["version"]
description = "Multi-agent orchestration for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
debussy = "debussy.__main__:main"
dbs = "debussy.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "debussy.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
